cluster1/traefik/ingressRoute_dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-oauth-redirect
spec:
  forwardAuth:
    address: https://oauth.traefik.test
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-Access-Token
      - Authorization
      - X-Auth-Request-Redirect
    tls:
      insecureSkipVerify: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`traefik.test`)
    middlewares:
    - name: traefik-oauth-redirect
    kind: Rule
    services:
    - name: traefik-dashboard-service
      port: 9100
  tls:
    secretName: traefik-dashboard-secret
